# SecureRequestHandler

./: CMakeLists.txt  LICENSE  Readme.md
Example/: CMakeLists.txt
Example/include/: SingleHandlerServer.h
Example/src/: main.cpp
SecureRequestHandler/: CMakeLists.txt
SecureRequestHandler/include/: BeastRequestAdapter.hpp  EnsureSendWasInvoked.hpp  GenericSerializer.cpp  GenericSerializer.hpp  GenericValidator.cpp  GenericValidator.hpp  JSONSerializer.cpp  JSONSerializer.hpp  JSONValidator.cpp  JSONValidator.hpp  QueryString.hpp  QueryStringSerializer.cpp  QueryStringSerializer.hpp  QueryStringValidator.cpp  QueryStringValidator.hpp  REST.hpp  RequestAdapter.hpp  SecureRequestHandler.hpp
